--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ a:hover {
     text-decoration: underline;
 }
 
-a[href*=://] {
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAAXNSR0IArs4c6QAAABJQTFRFY39IZmZmgICAmZmZzMzM////A5BfGQAAAAF0Uk5TAEDm2GYAAAABYktHRACIBR1IAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAPUlEQVQI12NgYFBSUmJgYDINDWIAsoGkoKAKkBQNcnUCkiohSkYMos5OAgoMoiGqAgwMoqGhQFJQUFCAAQDq2geW9A6RGwAAAABJRU5ErkJggg==) 99% 40% no-repeat;
+a[href*='://'] {
+    background:  url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAAXNSR0IArs4c6QAAABJQTFRFY39IZmZmgICAmZmZzMzM////A5BfGQAAAAF0Uk5TAEDm2GYAAAABYktHRACIBR1IAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAPUlEQVQI12NgYFBSUmJgYDINDWIAsoGkoKAKkBQNcnUCkiohSkYMos5OAgoMoiGqAgwMoqGhQFJQUFCAAQDq2geW9A6RGwAAAABJRU5ErkJggg==) 99% 40% no-repeat;
     padding-right: 15px;
 }
 
-a[href*=://]:hover {
+a[href*='://']:hover {
     background: red url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAAXNSR0IArs4c6QAAABJQTFRFY39IZmZmgICAmZmZzMzM////A5BfGQAAAAF0Uk5TAEDm2GYAAAABYktHRACIBR1IAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAPUlEQVQI12NgYFBSUmJgYDINDWIAsoGkoKAKkBQNcnUCkiohSkYMos5OAgoMoiGqAgwMoqGhQFJQUFCAAQDq2geW9A6RGwAAAABJRU5ErkJggg==) 99% 40% no-repeat;
     padding-right: 15px;
 }
